First attempt at guidance text.

--- a/app/views/alaveteli_pro/info_requests/new.html.erb
+++ b/app/views/alaveteli_pro/info_requests/new.html.erb
@@ -54,7 +54,7 @@
 
 
       <div id="request_advice" class="request_advice">
-        <%# Intentionally empty for now, it's part of the layout %>
+        <%= render partial: 'new_request_advice' %>
       </div>
 
       <div id="request_form" class="request_form">
