Update batch request writing views to use new separate models
This makes sure we're displaying the right data from the example request and
its related embargo and outgoing message, as well as their error messages if
something was invalid.

--- a/app/views/alaveteli_pro/info_request_batches/_form.html.erb
+++ b/app/views/alaveteli_pro/info_request_batches/_form.html.erb
@@ -37,7 +37,7 @@
         <%= f.select :embargo_duration,
                      options_for_select(
                        publish_at_options,
-                       :selected => @embargo.embargo_duration
+                       :selected => @embargo ? @embargo.embargo_duration : ''
                      ) %>
       </p>
       <div class="form_item_note">
