fixup! Move key parts of new info request page into partial

--- a/app/views/alaveteli_pro/info_requests/_form.html.erb
+++ b/app/views/alaveteli_pro/info_requests/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_tag([:alaveteli_pro, @draft_info_request],
-             method: @draft_info_request.id ? :put : :post,
+             :method => @draft_info_request.id ? :put : :post,
              :id => 'write_form',
              :class => 'new_info_request') do %>
 
