--- a/app/views/alaveteli_pro/info_requests/_message_preview.html.erb
+++ b/app/views/alaveteli_pro/info_requests/_message_preview.html.erb
@@ -1,7 +1,7 @@
 <div class="correspondence box" id="outgoing-0">
   <p class="preview_to">
     <strong><%= _('To') %></strong>
-      <%=h(@info_request.public_body.name)%>
+      <%= @info_request.public_body.name %>
 
   </p>
   <p class="preview_subject">
@@ -20,6 +20,7 @@
     <%= submit_tag _("Send request"),
                    :data => { :disable_with => _("Sending...") },
                    :id => 'submit_button' %>
-    <%= link_to _("Edit your request"), "#{new_alaveteli_pro_info_request_path}?draft_id=#{@draft_info_request.id}" %>
+    <%= link_to _("Edit your request"),
+                new_alaveteli_pro_info_request_path(draft_id: @draft_info_request.id) %>
   <% end %>
 </p>
