fixup! Show count of requests on pro batch request form submit

--- a/app/views/alaveteli_pro/info_request_batches/_message_preview.html.erb
+++ b/app/views/alaveteli_pro/info_request_batches/_message_preview.html.erb
@@ -20,8 +20,8 @@
 
     <%= submit_tag n_('Send {{count}} requests',
                       'Send {{count}} requests',
-                      batch.public_bodies.length,
-                      :count => batch.public_bodies.length),
+                      batch.public_bodies.size,
+                      :count => batch.public_bodies.size),
                    :data => { :disable_with => _("Sending...") },
                    :id => 'submit_button' %>
     <%= link_to _("Edit your request"),
